# manuscript-formatter

./: .gitignore  README.md  SECURITY.md  SKILL.md  install.sh  pyproject.toml
chatgpt/: CUSTOM_GPT_INSTRUCTIONS.md  SETUP.md  build_zip.sh
docs/: maintainer-notes.md
docs/plans/: 2026-04-26-article-types-v1.1-design.md  2026-04-26-article-types-v1.1.md  2026-04-26-chatgpt-distribution-design.md  2026-04-26-chatgpt-distribution.md  2026-04-26-manuscript-formatter-design.md  2026-04-26-manuscript-formatter.md
scripts/: _bibtex_to_csl.py  _endnote_xml_to_csl.py  _ris_to_csl.py  cover_letter.py  docx_helpers.py  format_manuscript.py  journal_config.py  references.py  report.py  validators.py
scripts/csl/: README.md
scripts/journals/: coir.yaml  int-j-prosthodont.yaml  j-dent.yaml  j-endod.yaml  j-periodontol.yaml  jada.yaml  jdr.yaml  jerd.yaml  jomi.yaml  jpd.yaml  oper-dent.yaml
tests/: test_bibliography_render.py  test_cli.py  test_cover_letter.py  test_csl_files.py  test_docx_helpers.py  test_heading_mapping.py  test_inline_citations.py  test_journal_config.py  test_references.py  test_report.py  test_section_reformat.py  test_text_preservation_invariant.py  test_validators.py
tests/fixtures/: build_fixtures.py  clinical_report_manuscript.docx  minimal_manuscript.docx  sample.bib  sample.ris  sample_endnote.xml  sample_zotero.json
