[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "manuscript-formatter"
version = "0.1.0"
description = "Reformat dental research manuscripts for journal submission"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.1",
    "citeproc-py>=0.6",
    "bibtexparser>=1.4,<2",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<10"]
